# kalla

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
kalla/: hooks.py
kalla/config/: desktop.py  docs.py
kalla/templates/generators/: item_group.html
kalla/templates/includes/navbar/: dropdown_items.html
kalla/www/all-products/: index.html  index.js  index.py  item_row.html
