[project]
name = "kalla"
version = "0.0.1"
description = "customizations for KallaBeautyNZ"
authors = [
    {name = "Juergen B.", email = "juergen@backhaus.co.nz"},
    {name = "kalla.co.nz", email = "info@kalla.co.nz"},
]
dependencies = ["frappe"]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pdm]
